--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@
 				text-align: center;
 				font-size: 23px;
 				color: white;
-				background-color: white;
+				background-color: transparent;
 			}
 
 			.main {
