--- a/quote.html
+++ b/quote.html
@@ -7,7 +7,7 @@
 		<style>
 			@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic);
 			blockquote {
-				font-size: 1.4em;
+				font-size: 1em;
 				width: 60%;
 				margin: 50px auto;
 				font-family: Open Sans;
@@ -43,7 +43,7 @@
 			}
 		</style>
 	</head>
-	<body>
+	<body style="background-color: transparent;">
 		<blockquote id="quote">
 		</blockquote>
 		<script>
@@ -70,7 +70,6 @@
 						return response.json();
 					})
 					.then(function (data) {
-            console.log(data);
             let d = document.getElementById("quote");
             let quote = `${data.content}<span id="author">${data.author}</span>`;
             d.innerHTML = quote;
