--- a/quote.html
+++ b/quote.html
@@ -9,7 +9,7 @@
 			blockquote {
 				font-size: 1em;
 				width: 60%;
-				margin: 50px auto;
+				margin: auto;
 				font-family: Open Sans;
 				font-style: italic;
 				color: #555555;
