--- a/calculator.html
+++ b/calculator.html
@@ -1,360 +1,180 @@
-<!-- origenal : https://codepen.io/dishabansal/pen/xypOBB -->
 <!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>calculator</title>
-		<link
-			href="https://fonts.googleapis.com/css2?family=Dosis:wght@500&family=MuseoModerno:wght@300;400&display=swap"
-			rel="stylesheet"
-		/>
-
+		<title>Document</title>
 		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500&display=swap");
+
+			* {
+				font-family: "Quicksand", sans-serif;
+				margin: 0;
+				padding: 0;
+				box-sizing: border-box;
+			}
+
 			body {
-				margin: 0 auto;
-				text-align: center;
-				font-size: 23px;
-				color: white;
-				background-color: transparent;
-			}
-
-			.main {
-				max-width: 10%;
-			}
-
-			a,
-			a:visited {
-				color: goldenrod;
-			}
-
-			.dark {
-				background: #b7df89 !important;
-			}
-
-			.button > .over {
-				text-decoration: overline;
-				display: inline-block;
-				position: relative;
-				top: 3px;
-				left: -4px;
-			}
-
-			.calculator {
-				display: inline-block;
-				background: white;
-				margin: 1% 0;
-				color: black;
-				border-radius: 5%;
-				border: 1px solid #e7e7e7;
-				/*     box-shadow: 0px 8px 20px 0px grey; */
-				background-color: white;
-			}
-
-			.calculator button {
-				font-size: x-large;
-				color: #3f3f3f;
-				width: 2.5em;
-				min-height: 2.5em;
-				margin: 0.8%;
-				border-radius: 25%;
-				background-color: #cad8d8;
-				border: 1px solid #ad919100;
-				font-family: "MuseoModerno", cursive;
-			}
-
-			.calculator button:hover,
-			#clear:hover,
-			#backspace:hover {
-				background: #f7e583 !important;
-				color: #626262;
-				transform: scale(0.9);
-				border-radius: 20%;
-			}
-
-			.calculator button:focus,
-			#clear:focus,
-			#backspace:focus {
-				outline: none;
-			}
-
-			.button:active,
-			.button-active {
-				background: gold;
-				color: white;
-				transform: scale(0.9);
-			}
-
-			#screen {
-				background-color: #ececec;
-				border: 3px solid transparent;
-				/* box-shadow: 3px 3px 3px 3px grey; */
-				border-radius: 29px;
-				width: 80%;
-				height: 120px;
-				margin-left: 5%;
-				margin-right: 5%;
-				margin-top: 5%;
-				text-align: right;
-				overflow: auto;
-				overflow-wrap: break-word;
-				font-size: 60px;
-				font-family: "Dosis", sans-serif;
-			}
-
-			#clean {
-				background: #c4eded;
-			}
-
-			.calculator__row1,
-			.calculator__row2,
-			.calculator__row3,
-			.calculator__row4,
-			.calculator__row5 {
 				display: flex;
-				margin: 0 auto;
-				max-width: 80%;
-				justify-content: space-around;
+				justify-content: center;
 				align-items: center;
-				font-family: "Libre Barcode 128 Text", cursive;
+				min-height: 100vh;
+				/* background: #031323; */
 			}
 
-			.calculator__row5 {
-				margin-bottom: 3%;
-			}
-
-			.footer {
-				/* margin-top: 2%;
-  font-size: medium; */
+			/* body::before {
+				content: "";
 				position: absolute;
+				top: 0;
 				left: 0;
-				right: 0;
-				bottom: 0;
+				width: 100%;
+				height: 100%;
+				background: linear-gradient(#fa9d74, #eb0069);
+				clip-path: polygon(30% 10%, 50% 40%, 30% 75%, 10% 40%);
+			}
+
+			body::after {
+				content: "";
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				background: linear-gradient(#f50202, #1928f5);
+				clip-path: circle(20% at 70% 75%);
+			} */
+
+			.container {
+				position: relative;
+				background: #031323;
+				border-radius: 6px;
+				overflow: hidden;
+				z-index: 10;
+				backdrop-filter: blur(15px);
+				border-top: 1px solid rgba(255, 255, 255, 0.2);
+				border-left: 1px solid rgba(255, 255, 255, 0.2);
+				box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+			}
+
+			.container .calculator {
+				position: relative;
+				display: grid;
+			}
+
+			.container .calculator .value {
+				grid-column: span 4;
+				height: 140px;
+				width: 300px;
+				text-align: right;
+				border: none;
+				outline: none;
+				padding: 10px;
+				font-size: 30px;
+				background: transparent;
+				color: #fff;
+				border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+				border-right: 1px solid rgba(255, 255, 255, 0.05);
+			}
+
+			.container .calculator span {
+				display: grid;
+				align-items: center;
+				justify-items: center;
+				height: 75px;
+				width: 75px;
+				color: #fff;
+				font-weight: 400;
+				cursor: pointer;
+				font-size: 20px;
+				user-select: none;
+				border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+				border-right: 1px solid rgba(255, 255, 255, 0.05);
+				transition: 0.5s;
+			}
+
+			.container .calculator span:hover {
+				transition: 0s;
+				background: rgba(255, 255, 255, 0.05);
+			}
+
+			.container .calculator span:active {
+				background: #14ff47;
+				color: #192f00;
+				font-size: 24px;
+				font-weight: 500;
+			}
+
+			.container .calculator .clear {
+				grid-column: span 2;
+				width: 150px;
+				background: rgba(255, 255, 255, 0.05);
+			}
+
+			.container .calculator .plus {
+				grid-row: span 2;
+				height: 150px;
+			}
+
+			.equal {
+				background: rgba(255, 255, 255, 0.05);
+			}
+
+			@media (max-width: 768px) {
+				body::before {
+					max-width: 75vw;
+					max-height: 75vh;
+				}
 			}
 		</style>
 	</head>
-	<body>
-		<link href="https://fonts.googleapis.com/css?family=Libre+Barcode+128+Text" rel="stylesheet" />
-		<div id="main">
-			<div class="calculator">
-				<input type="text" id="screen" />
-				<div class="calculator__row1">
-					<button class="button">Rad</button>
-					<button class="button">Deg</button>
+	<body id="body">
+		<script>
+			import * as vanillaTilt from "https://cdn.skypack.dev/vanilla-tilt@1.7.0";
 
-					<h1 style="font-size: 200%; margin-left: 230px; margin-right: 20px"></h1>
-					<button class="button" id="clean">AC</button>
-				</div>
-				<div class="calculator__row2">
-					<button class="button">sin</button>
-					<button class="button">cos</button>
-					<button class="button">tan</button>
-					<button class="button dark">7</button>
-					<button class="button dark">8</button>
-					<button class="button dark">9</button>
-					<button class="button">*</button>
-				</div>
-				<div class="calculator__row3">
-					<button class="button">x^</button>
-					<button class="button">pi</button>
-					<button class="button">%</button>
-					<button class="button dark">4</button>
-					<button class="button dark">5</button>
-					<button class="button dark">6</button>
-					<button class="button">/</button>
-				</div>
-				<div class="calculator__row4">
-					<button class="button">ln</button>
-					<button class="button">log</button>
-					<button class="button">x!</button>
-					<button class="button dark">1</button>
-					<button class="button dark">2</button>
-					<button class="button dark">3</button>
-					<button class="button">-</button>
-				</div>
-				<div class="calculator__row5">
-					<button class="button">&radic;<span class="over"></span></button>
-					<button class="button">(</button>
-					<button class="button">)</button>
-					<button class="button">.</button>
-					<button class="button dark">0</button>
-					<button class="button">=</button>
-					<button class="button">+</button>
-				</div>
-			</div>
+			VanillaTilt.init(document.querySelector(".container"), {
+				max: 25,
+				speed: 300,
+				glare: true,
+				"max-glare": 0.2,
+      });
+      </script>
+      <script>
+      var qs = (function (a) {
+				if (a == "") return {};
+				var b = {};
+				for (var i = 0; i < a.length; ++i) {
+					var p = a[i].split("=", 2);
+					if (p.length == 1) b[p[0]] = "";
+					else b[p[0]] = decodeURIComponent(p[1].replace(/\+/g, " "));
+				}
+				return b;
+			})(window.location.search.substr(1).split("&"));
+			if (qs["theme"] === "dark") {
+				document.getElementById("body").style.backgroundColor = "#2f3437";
+			}
+		</script>
+		<div class="container" data-tilt data-tilt-full-page-listening data-tilt-axis="x">
+			<form class="calculator" name="calc">
+				<input type="text" readonly class="value" name="txt" />
+				<span class="num clear" onclick="calc.txt.value = ''">c</span>
+				<span class="num" onclick="document.calc.txt.value += '/'">/</span>
+				<span class="num" onclick="document.calc.txt.value += '*'">*</span>
+				<span class="num" onclick="document.calc.txt.value += '7'">7</span>
+				<span class="num" onclick="document.calc.txt.value += '8'">8</span>
+				<span class="num" onclick="document.calc.txt.value += '9'">9</span>
+				<span class="num" onclick="document.calc.txt.value += '-'">-</span>
+				<span class="num" onclick="document.calc.txt.value += '4'">4</span>
+				<span class="num" onclick="document.calc.txt.value += '5'">5</span>
+				<span class="num" onclick="document.calc.txt.value += '6'">6</span>
+				<span class="num plus" onclick="document.calc.txt.value += '+'">+</span>
+				<span class="num" onclick="document.calc.txt.value += '1'">1</span>
+				<span class="num" onclick="document.calc.txt.value += '2'">2</span>
+				<span class="num" onclick="document.calc.txt.value += '3'">3</span>
+				<span class="num" onclick="document.calc.txt.value += '0'">0</span>
+				<span class="num" onclick="document.calc.txt.value += '00'">00</span>
+				<span class="num" onclick="document.calc.txt.value += '.'">.</span>
+				<span class="num equal" onclick="document.calc.txt.value = eval(calc.txt.value)">=</span>
+			</form>
 		</div>
 	</body>
-
-	<script>
-		var display = document.getElementById("screen");
-		var buttons = document.getElementsByClassName("button");
-
-		Array.prototype.forEach.call(buttons, function (button) {
-			button.addEventListener("click", function () {
-				if (
-					button.textContent != "=" &&
-					button.textContent != "AC" &&
-					button.textContent != "*" &&
-					button.textContent != "/" &&
-					button.textContent != "√" &&
-					button.textContent != "+" &&
-					button.textContent != "%" &&
-					button.textContent != "=" &&
-					button.textContent != "-" &&
-					button.textContent != "sin" &&
-					button.textContent != "cos" &&
-					button.textContent != "tan" &&
-					button.textContent != "log" &&
-					button.textContent != "ln" &&
-					button.textContent != "x^" &&
-					button.textContent != "x!" &&
-					button.textContent != "pi" &&
-					button.textContent != "Rad" &&
-					button.textContent != "Deg"
-				) {
-					display.value += button.textContent;
-				} else if (button.textContent === "=") {
-					equals();
-				} else if (button.textContent === "AC") {
-					clear();
-				} else if (button.textContent === "*") {
-					multiply();
-				} else if (button.textContent === "/") {
-					divide();
-				} else if (button.textContent === "+") {
-					plus();
-				} else if (button.textContent === "-") {
-					Minus();
-				} else if (button.textContent === "%") {
-					percent();
-				} else if (button.textContent === "pi") {
-					pi();
-				} else if (button.textContent === "√") {
-					squareRoot();
-				} else if (button.textContent === "sin") {
-					sin();
-				} else if (button.textContent === "cos") {
-					cos();
-				} else if (button.textContent === "tan") {
-					tan();
-				} else if (button.textContent === "log") {
-					log();
-				} else if (button.textContent === "ln") {
-					ln();
-				} else if (button.textContent === "x^") {
-					exponent();
-				} else if (button.textContent === "x!") {
-					factorial();
-				} else if (button.textContent === "Rad") {
-					radians();
-				} else if (button.textContent === "Deg") {
-					degrees();
-				}
-			});
-		});
-
-		function syntaxError() {
-			if (
-				eval(display.value) == SyntaxError ||
-				eval(display.value) == ReferenceError ||
-				eval(display.value) == TypeError
-			) {
-				display.value == "Syntax Error";
-			}
-		}
-
-		function equals() {
-			if (display.value.indexOf("^") > -1) {
-				var base = display.value.slice(0, display.value.indexOf("^"));
-				var exponent = display.value.slice(display.value.indexOf("^") + 1);
-				display.value = eval("Math.pow(" + base + "," + exponent + ")");
-			} else {
-				display.value = eval(display.value);
-				checkLength();
-				syntaxError();
-			}
-		}
-
-		function clear() {
-			display.value = "";
-		}
-
-		function multiply() {
-			display.value += "*";
-		}
-
-		function divide() {
-			display.value += "/";
-		}
-		function plus() {
-			display.value += "+";
-		}
-
-		function Minus() {
-			display.value += "-";
-		}
-
-		function factorial() {
-			var number = 1;
-			if (display.value === 0) {
-				display.value = "1";
-			} else if (display.value < 0) {
-				display.value = "undefined";
-			} else {
-				var number = 1;
-				for (var i = display.value; i > 0; i--) {
-					number *= i;
-				}
-				display.value = number;
-			}
-		}
-
-		function pi() {
-			display.value = display.value * Math.PI;
-		}
-
-		function square() {
-			display.value = eval(display.value * display.value);
-		}
-
-		function squareRoot() {
-			display.value = Math.sqrt(display.value);
-		}
-
-		function percent() {
-			display.value = display.value / 100;
-		}
-
-		function sin() {
-			display.value = Math.sin(display.value);
-		}
-
-		function cos() {
-			display.value = Math.cos(display.value);
-		}
-
-		function tan() {
-			display.value = Math.tan(display.value);
-		}
-
-		function log() {
-			display.value = Math.log10(display.value);
-		}
-
-		function ln() {
-			display.value = Math.log(display.value);
-		}
-
-		function exponent() {
-			display.value += "^";
-		}
-
-		function radians() {
-			display.value = display.value * (Math.PI / 180);
-		}
-
-		function degrees() {
-			display.value = display.value * (180 / Math.PI);
-		}
-	</script>
 </html>
